Fixes cell numbering (of input/output) by restarting kernel and running code in order.

--- a/data_wrangling_json/sliderule_dsi_json_exercise.ipynb
+++ b/data_wrangling_json/sliderule_dsi_json_exercise.ipynb
@@ -9,40 +9,9 @@
     "+ get familiar with packages for dealing with JSON\n",
     "+ study examples with JSON strings and files \n",
     "+ work on exercise to be completed and submitted \n",
-    "****\n",
+    "\n",
     "+ reference: http://pandas.pydata.org/pandas-docs/stable/io.html#io-json-reader\n",
-    "+ data source: http://jsonstudio.com/resources/\n",
-    "****"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib as mpl\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## imports for Python, Pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "from pandas.io.json import json_normalize"
+    "+ data source: http://jsonstudio.com/resources/\n"
    ]
   },
   {
@@ -52,379 +21,21 @@
     "## JSON example, with string\n",
     "\n",
     "+ demonstrates creation of normalized dataframes (tables) from nested json string\n",
-    "+ source: http://pandas.pydata.org/pandas-docs/stable/io.html#normalization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define json string\n",
-    "data = [{'state': 'Florida', \n",
-    "         'shortname': 'FL',\n",
-    "         'info': {'governor': 'Rick Scott'},\n",
-    "         'counties': [{'name': 'Dade', 'population': 12345},\n",
-    "                      {'name': 'Broward', 'population': 40000},\n",
-    "                      {'name': 'Palm Beach', 'population': 60000}]},\n",
-    "        {'state': 'Ohio',\n",
-    "         'shortname': 'OH',\n",
-    "         'info': {'governor': 'John Kasich'},\n",
-    "         'counties': [{'name': 'Summit', 'population': 1234},\n",
-    "                      {'name': 'Cuyahoga', 'population': 1337}]}]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>population</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Dade</td>\n",
-       "      <td>12345</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Broward</td>\n",
-       "      <td>40000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Palm Beach</td>\n",
-       "      <td>60000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Summit</td>\n",
-       "      <td>1234</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Cuyahoga</td>\n",
-       "      <td>1337</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         name  population\n",
-       "0        Dade       12345\n",
-       "1     Broward       40000\n",
-       "2  Palm Beach       60000\n",
-       "3      Summit        1234\n",
-       "4    Cuyahoga        1337"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# use normalization to create tables from nested element\n",
-    "json_normalize(data, 'counties')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>population</th>\n",
-       "      <th>state</th>\n",
-       "      <th>shortname</th>\n",
-       "      <th>info.governor</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Dade</td>\n",
-       "      <td>12345</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>FL</td>\n",
-       "      <td>Rick Scott</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Broward</td>\n",
-       "      <td>40000</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>FL</td>\n",
-       "      <td>Rick Scott</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Palm Beach</td>\n",
-       "      <td>60000</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>FL</td>\n",
-       "      <td>Rick Scott</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Summit</td>\n",
-       "      <td>1234</td>\n",
-       "      <td>Ohio</td>\n",
-       "      <td>OH</td>\n",
-       "      <td>John Kasich</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Cuyahoga</td>\n",
-       "      <td>1337</td>\n",
-       "      <td>Ohio</td>\n",
-       "      <td>OH</td>\n",
-       "      <td>John Kasich</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         name  population    state shortname info.governor\n",
-       "0        Dade       12345  Florida        FL    Rick Scott\n",
-       "1     Broward       40000  Florida        FL    Rick Scott\n",
-       "2  Palm Beach       60000  Florida        FL    Rick Scott\n",
-       "3      Summit        1234     Ohio        OH   John Kasich\n",
-       "4    Cuyahoga        1337     Ohio        OH   John Kasich"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# further populate tables created from nested element\n",
-    "json_normalize(data, 'counties', ['state', 'shortname', ['info', 'governor']])"
+    "\n",
+    "http://pandas.pydata.org/pandas-docs/stable/io.html#normalization"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "****\n",
     "## JSON example, with file\n",
     "\n",
     "+ demonstrates reading in a json file as a string and as a table\n",
     "+ uses small sample file containing data about projects funded by the World Bank \n",
-    "+ data source: http://jsonstudio.com/resources/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load json as string\n",
-    "# json.load((open('data/world_bank_projects_less.json')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>_id</th>\n",
-       "      <th>approvalfy</th>\n",
-       "      <th>board_approval_month</th>\n",
-       "      <th>boardapprovaldate</th>\n",
-       "      <th>borrower</th>\n",
-       "      <th>closingdate</th>\n",
-       "      <th>country_namecode</th>\n",
-       "      <th>countrycode</th>\n",
-       "      <th>countryname</th>\n",
-       "      <th>countryshortname</th>\n",
-       "      <th>...</th>\n",
-       "      <th>sectorcode</th>\n",
-       "      <th>source</th>\n",
-       "      <th>status</th>\n",
-       "      <th>supplementprojectflg</th>\n",
-       "      <th>theme1</th>\n",
-       "      <th>theme_namecode</th>\n",
-       "      <th>themecode</th>\n",
-       "      <th>totalamt</th>\n",
-       "      <th>totalcommamt</th>\n",
-       "      <th>url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>{'$oid': '52b213b38594d8a2be17c780'}</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>November</td>\n",
-       "      <td>2013-11-12T00:00:00Z</td>\n",
-       "      <td>FEDERAL DEMOCRATIC REPUBLIC OF ETHIOPIA</td>\n",
-       "      <td>2018-07-07T00:00:00Z</td>\n",
-       "      <td>Federal Democratic Republic of Ethiopia!$!ET</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>Federal Democratic Republic of Ethiopia</td>\n",
-       "      <td>Ethiopia</td>\n",
-       "      <td>...</td>\n",
-       "      <td>ET,BS,ES,EP</td>\n",
-       "      <td>IBRD</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>N</td>\n",
-       "      <td>{'Name': 'Education for all', 'Percent': 100}</td>\n",
-       "      <td>[{'name': 'Education for all', 'code': '65'}]</td>\n",
-       "      <td>65</td>\n",
-       "      <td>130000000</td>\n",
-       "      <td>130000000</td>\n",
-       "      <td>http://www.worldbank.org/projects/P129828/ethi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>{'$oid': '52b213b38594d8a2be17c781'}</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>November</td>\n",
-       "      <td>2013-11-04T00:00:00Z</td>\n",
-       "      <td>GOVERNMENT OF TUNISIA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Republic of Tunisia!$!TN</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>Republic of Tunisia</td>\n",
-       "      <td>Tunisia</td>\n",
-       "      <td>...</td>\n",
-       "      <td>BZ,BS</td>\n",
-       "      <td>IBRD</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>N</td>\n",
-       "      <td>{'Name': 'Other economic management', 'Percent...</td>\n",
-       "      <td>[{'name': 'Other economic management', 'code':...</td>\n",
-       "      <td>54,24</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4700000</td>\n",
-       "      <td>http://www.worldbank.org/projects/P144674?lang=en</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2 rows × 50 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                    _id  approvalfy board_approval_month  \\\n",
-       "0  {'$oid': '52b213b38594d8a2be17c780'}        1999             November   \n",
-       "1  {'$oid': '52b213b38594d8a2be17c781'}        2015             November   \n",
-       "\n",
-       "      boardapprovaldate                                 borrower  \\\n",
-       "0  2013-11-12T00:00:00Z  FEDERAL DEMOCRATIC REPUBLIC OF ETHIOPIA   \n",
-       "1  2013-11-04T00:00:00Z                    GOVERNMENT OF TUNISIA   \n",
-       "\n",
-       "            closingdate                              country_namecode  \\\n",
-       "0  2018-07-07T00:00:00Z  Federal Democratic Republic of Ethiopia!$!ET   \n",
-       "1                   NaN                      Republic of Tunisia!$!TN   \n",
-       "\n",
-       "  countrycode                              countryname countryshortname  \\\n",
-       "0          ET  Federal Democratic Republic of Ethiopia         Ethiopia   \n",
-       "1          TN                      Republic of Tunisia          Tunisia   \n",
-       "\n",
-       "                         ...                           sectorcode source  \\\n",
-       "0                        ...                          ET,BS,ES,EP   IBRD   \n",
-       "1                        ...                                BZ,BS   IBRD   \n",
-       "\n",
-       "   status  supplementprojectflg  \\\n",
-       "0  Active                     N   \n",
-       "1  Active                     N   \n",
-       "\n",
-       "                                              theme1  \\\n",
-       "0      {'Name': 'Education for all', 'Percent': 100}   \n",
-       "1  {'Name': 'Other economic management', 'Percent...   \n",
-       "\n",
-       "                                      theme_namecode themecode   totalamt  \\\n",
-       "0      [{'name': 'Education for all', 'code': '65'}]        65  130000000   \n",
-       "1  [{'name': 'Other economic management', 'code':...     54,24          0   \n",
-       "\n",
-       "  totalcommamt                                                url  \n",
-       "0    130000000  http://www.worldbank.org/projects/P129828/ethi...  \n",
-       "1      4700000  http://www.worldbank.org/projects/P144674?lang=en  \n",
-       "\n",
-       "[2 rows x 50 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# load as Pandas dataframe\n",
-    "sample_json_df = pd.read_json('data/world_bank_projects_less.json')\n",
-    "sample_json_df"
+    "+ data source: http://jsonstudio.com/resources/\n",
+    "\n",
+    "(Not shown.)"
    ]
   },
   {
@@ -448,7 +59,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns \n",
+    "\n",
+    "import json\n",
+    "from pandas.io.json import json_normalize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +284,7 @@
        "449            GOVERNMENT OF NIGER"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -854,7 +483,7 @@
        "4    5                         Trade and integration"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
