Finishes answering each question with the bootstrap.

--- a/mini-project_inferential_stats_1/inferential_stats_1.ipynb
+++ b/mini-project_inferential_stats_1/inferential_stats_1.ipynb
@@ -106,10 +106,12 @@
    ],
    "source": [
     "# Import packages\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import statsmodels.api as sm\n",
     "import scipy.stats as stats\n",
     "from matplotlib import pyplot as plt\n",
+    "import pdb\n",
     "\n",
     "# Import data (only relevant columns)\n",
     "df = pd.read_csv('data/human_body_temperature.csv', usecols=['temperature', 'gender'])\n",
@@ -176,7 +178,7 @@
    "source": [
     "The plot shows that the observed distribution of temperature has slightly wider tales (more extreme values) then a normal distribution. The data points do not all lie on the 45° line: For the most extreme values, the observed quantiles are more extreme than the theoretical quantiles. \n",
     "\n",
-    "However, we cannot expect the observed and the theoretical quantile's to overlap perfectly in finite samples. Thus, we have to do a significance test to determine if this deviation could easily have been produced by random variation alone, or if it is substantial enough that we should reject the hypothesis that body temperature is normally distributed. One of the best tests for normality is the Shapiro-Wilk Test, so let's apply it:"
+    "However, we cannot expect the observed and the theoretical quantile's to overlap perfectly in finite samples. Thus, we have to do a significance test to determine if this deviation could easily have been produced by random variation alone, or if it is substantial enough that we should reject the hypothesis (namely that body temperature is normally distributed). One of the best tests for normality is the Shapiro-Wilk Test, so let's apply it:"
    ]
   },
   {
@@ -255,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +266,7 @@
        "1.938714386500485"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's do the hacker way: We know that we can to make the observations independent by randomly reshuffling them. If we do this a large number of times, we can thus impute the distribution of the autocorrelation statistic under the null hypothesis of independent samples.  We can then compute the autocorrelation for the data as we have them, and determine where in this distribution it falls. This gives us the p-value."
+    "Now let's do it the hacker way: We know that we can to make the observations independent by randomly reshuffling them. If we do this a large number of times, we can thus impute the distribution of the autocorrelation statistic under the null hypothesis of independent samples.  We can then compute the autocorrelation for the data as we have them, and determine where in this distribution it falls. This gives us the p-value."
    ]
   },
   {
@@ -308,7 +310,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# \n",
+    "def test_independence(s, n_samples=10000, seed=1):\n",
+    "    # Reshuffle data to make them independent, repeat n_samples times\n",
+    "    rng = np.random.RandomState(seed)\n",
+    "    bootstrap_samples = rng.choice(s, shape=(len(s), n_samples)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -321,6 +329,81 @@
     "    <li> In this situation, is it appropriate to use the $t$ or $z$ statistic? \n",
     "    <li> Now try using the other test. How is the result be different? Why?\n",
     "    </ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create n_samples bootstrap samples, each filling one column\n",
+    "def bootstrap_p_value(data, actual_value, statistic=np.mean:\n",
+    "    samples = np.random.choice(data, size=(len(data), n_samples))\n",
+    "    # For each sample, create boostrap replicate\n",
+    "    replicates = np.apply_along_axis(func1d=statistic,\n",
+    "                                     axis=0,\n",
+    "                                     arr=samples)\n",
+    "    \n",
+    "    # Compute p-value\n",
+    "    # First compute what percentage of replicates are LOWER\n",
+    "    p = (replicates < actual_value).mean() \n",
+    "    # If more than half are LOWER, compute what percentage is HIGHER\n",
+    "    if p > 0.5:\n",
+    "        p = (replicates > actual_value).mean()\n",
+    "    \n",
+    "    # If conducting a 2-sided test, adjust the p-value accordingly\n",
+    "    if two_sided == True:\n",
+    "        p = 2 * p\n",
+    "\n",
+    "    return(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, array([98.44114038, 98.46384615]))"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def bootstrap_h_test_1(data, value, n_samples, two_sided=True):\n",
+    "    \"\"\"Tests whether the mean of a pd.Series is equal to a given value.\"\"\"\n",
+    "\n",
+    "    # Compute mean of the data and make it equal to null hypothesis\n",
+    "    actual_mean = data.mean()\n",
+    "    data = data - actual_mean + value\n",
+    "    p = bootstrap_p_value(data, statistic=np.mean, n_samples=n_samples, two_sided=two_sided)\n",
+    "#     # Create n_samples bootstrap samples, each filling one column\n",
+    "#     samples = np.random.choice(data, size=(len(data), n_samples))\n",
+    "#     # For each sample, create boostrap replicate\n",
+    "#     replicates = np.apply_along_axis(func1d=np.mean,\n",
+    "#                                      axis=0,\n",
+    "#                                      arr=samples)\n",
+    "#     # Compute p-value\n",
+    "#     # First compute what percentage of replicates are LOWER\n",
+    "#     p = (replicates < actual_mean).mean() \n",
+    "#     # If more than half are, compute what percentage is HIGHER\n",
+    "#     if p > 0.5:\n",
+    "#         p = (replicates > actual_mean).mean()\n",
+    "    \n",
+    "#     # If conducting a 2-sided test, adjust the p-value accordingly\n",
+    "#     if two_sided == True:\n",
+    "#         p = 2 * p\n",
+    "    \n",
+    "    return(p)\n",
+    "\n",
+    "# Computes bootstrap confidence interval for mean temperature\n",
+    "bootstrap_h_test_1(data=df.temperature, value=98.6, n_samples=1000)"
    ]
   },
   {
@@ -346,6 +429,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([96.8, 99.5])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def bootstrap_ci_indiv(data, n_samples, q=[2.5, 97.5]):\n",
+    "    # Sample n_samples points\n",
+    "    samples = np.random.choice(data, size=n_samples)\n",
+    "    # Compute bootstrap confidence interval\n",
+    "    return(np.percentile(samples, q))\n",
+    "\n",
+    "# Compute confidence intervals for an individual observation\n",
+    "bootstrap_ci_indiv(data=df.temperature, n_samples=1000)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -355,6 +465,87 @@
     "    <li> Write a story with your conclusion in the context of the original problem.\n",
     "    </ul>\n",
     "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To investigate whether there is a gender difference in normal body temperature, I will conduct a bootstrapped hypothesis test.  I start from the null hypothesis that there is no difference on average. To simulate the distribution of our test statistic – average difference in body temperature – under this null hypothesis, we randomly reshuffle the temperature observations, and then randomly assign a gender to each. We can then determine at which percentile in this distribution are observed difference lies.  If it does not lie between the 2.5th and 97.5th percentile, it is unlikely that the observed difference in body temperatures is generated from a distribution with no gender difference, and therefore we would reject the null hypothesis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def permutation_stat(df, v, group, statistic):\n",
+    "    \"\"\"Compute test statistic on permutation replicate\"\"\"\n",
+    "    # Permute values\n",
+    "    v_permuted = np.random.permutation(df.loc[:, v])\n",
+    "    \n",
+    "    # Randomly assign groups\n",
+    "    group_1 = v_permuted[: n_unique[0]]\n",
+    "    group_2 = v_permuted[: n_unique[1]]\n",
+    "    \n",
+    "    # Return test statistic\n",
+    "    #pdb.set_trace()\n",
+    "    stat = statistic(group_1, group_2)\n",
+    "    return(stat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def permutation_hypothesis_test(df, v, group, statistic, n_permutations=1000):\n",
+    "    \"\"\"Performs a hypothesis test using the bootstrap.\"\"\"\n",
+    "    \n",
+    "    # Count number of observations in each group\n",
+    "    global n_unique # For some reason, doesn't work otherwise\n",
+    "    n_unique = df.loc[:, group].value_counts()\n",
+    "    \n",
+    "    # Compute Test statistic for permutation replicates \n",
+    "    permutation_stats = np.empty(shape=n_permutations)\n",
+    "    for replicate in range(n_permutations):\n",
+    "        permutation_stats[replicate] = permutation_stat(df, v, group, \n",
+    "                                                        statistic)\n",
+    "    # pdb.set_trace()\n",
+    "    # Compute actual test statistic\n",
+    "    s1=df.loc[df[group]==n_unique.index[0], v]\n",
+    "    s2=df.loc[df[group]==n_unique.index[1], v]\n",
+    "    actual_stat = statistic(s1, s2)\n",
+    "    \n",
+    "    # Compute p-value\n",
+    "    # First try A lower test\n",
+    "    p = (permutation_stats < actual_stat).mean()\n",
+    "    # If it's greater than 50%, do an upper test instead\n",
+    "    if p > 0.5:\n",
+    "        p = (permutation_stats >= actual_stat).mean()\n",
+    "\n",
+    "    return(p)\n",
+    "\n",
+    "\n",
+    "def diff_in_means(s1, s2):\n",
+    "    \"\"\" Returns the difference in means between two pd.Series.\"\"\"\n",
+    "    return (s1.mean() - s2.mean())\n",
+    "\n",
+    "permutation_hypothesis_test(df, 'temperature', 'gender', \n",
+    "                            statistic=diff_in_means)"
    ]
   },
   {
