--- a/mini-project_inferential_stats_1/inferential_stats_1.ipynb
+++ b/mini-project_inferential_stats_1/inferential_stats_1.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "#### Background\n",
     "\n",
-    "The mean normal body temperature was held to be 37$^{\\circ}$C or 98.6$^{\\circ}$F for more than 120 years since it was first conceptualized and reported by Carl Wunderlich in a famous 1868 book. But, is this value statistically correct?\n",
+    "The mean normal body temperature was held to be 37°C or 98.6°F for more than 120 years since it was first conceptualized and reported by Carl Wunderlich in a famous 1868 book. But, is this value statistically correct?\n",
     "\n",
     "<h3>Exercises</h3>\n",
     "\n",
@@ -23,11 +23,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<li>  **Is the distribution of body temperatures normal? \n",
+    "**<li>  Is the distribution of body temperatures normal? \n",
     "    <ul>\n",
     "    <li> Although this is not a requirement for the Central Limit Theorem to hold (read the introduction on Wikipedia's page about the CLT carefully: https://en.wikipedia.org/wiki/Central_limit_theorem), it gives us some peace of mind that the population may also be normally distributed if we assume that this sample is representative of the population.\n",
-    "    <li> Think about the way you're going to check for the normality of the distribution. Graphical methods are usually used first, but there are also other ways: https://en.wikipedia.org/wiki/Normality_test**\n",
-    "    </ul>"
+    "    <li> Think about the way you're going to check for the normality of the distribution. Graphical methods are usually used first, but there are also other ways: https://en.wikipedia.org/wiki/Normality_test\n",
+    "    </ul>**"
    ]
   },
   {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "4         98.0      F"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,23 +196,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2331680953502655"
+       "0.23"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Conduct Shapiro-Wilk test, return only p-value\n",
-    "stats.shapiro(df.temperature)[1]"
+    "round(stats.shapiro(df.temperature)[1], 2)"
    ]
   },
   {
@@ -226,10 +226,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<li>  **Is the sample size large? Are the observations independent?\n",
+    "**<li>  Is the sample size large? Are the observations independent?\n",
     "    <ul>\n",
-    "    <li> Remember that this is a condition for the Central Limit Theorem, and hence the statistical tests we are using, to apply.**\n",
-    "    </ul>"
+    "    <li> Remember that this is a condition for the Central Limit Theorem, and hence the statistical tests we are using, to apply.\n",
+    "    </ul>**"
    ]
   },
   {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "0.7438"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,22 +466,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "98.24923076923078"
+       "98.25"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.temperature.mean()"
+    "round(df.temperature.mean(), 2)"
    ]
   },
   {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        "0.0"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
        "Ttest_1sampResult(statistic=-5.4548232923645195, pvalue=2.4106320415561276e-07)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -639,13 +639,15 @@
        "(-5.4548232923645195, 4.9021570141012155e-08)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "statsmodels.stats.weightstats.ztest(x1=df.temperature.values, value=98.6)"
+    "statsmodels.stats.weightstats.ztest(\n",
+    "    x1=df.temperature.values, \n",
+    "    value=98.6)"
    ]
   },
   {
@@ -668,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -676,10 +678,10 @@
      "output_type": "stream",
      "text": [
       "t-test results:\n",
-      " Ttest_1sampResult(statistic=-1.9658186252250536, pvalue=0.08088423631974037) \n",
+      " [-1.966  0.081] \n",
       "\n",
       "z-test results:\n",
-      " (-1.9658186252250536, 0.04931956555099463)\n"
+      " [-1.966  0.049]\n"
      ]
     }
    ],
@@ -689,11 +691,16 @@
     "sample = rng.choice(df.temperature, size=10, replace=False)\n",
     "\n",
     "# Conduct t-test\n",
-    "print('t-test results:\\n {} \\n'.format(stats.ttest_1samp(sample, 98.6)))\n",
+    "t_test_small = stats.ttest_1samp(sample, 98.6)\n",
+    "\n",
+    "print('t-test results:\\n {} \\n' \\\n",
+    "      .format(np.round_(t_test_small, 3)))\n",
     "\n",
     "# Conduct z-test\n",
+    "z_test_small = statsmodels.stats.weightstats.ztest(sample, value=98.6)\n",
+    "\n",
     "print('z-test results:\\n {}' \\\n",
-    "    .format(statsmodels.stats.weightstats.ztest(sample, value=98.6)))"
+    "    .format(np.round_(z_test_small, 3)))"
    ]
   },
   {
@@ -725,16 +732,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([96.70000000, 99.50000000])"
+       "array([96.7, 99.5])"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,8 +773,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -804,11 +813,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<li>  Is there a significant difference between males and females in normal temperature?\n",
+    "**<li> Is there a significant difference between males and females in normal temperature?\n",
     "    <ul>\n",
     "    <li> What testing approach did you use and why?\n",
-    "    </ul>\n",
-    "</ol>**"
+    "    </ul>**"
    ]
   },
   {
@@ -822,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -891,8 +899,8 @@
     "    group_value_counts = df.loc[:, group].value_counts()\n",
     "    \n",
     "    # Compute actual test statistic\n",
-    "    data_1 = df.loc[df[group]==n_unique.index[0], v]\n",
-    "    data_2 = df.loc[df[group]==n_unique.index[1], v]\n",
+    "    data_1 = df.loc[df[group]==group_value_counts.index[0], v]\n",
+    "    data_2 = df.loc[df[group]==group_value_counts.index[1], v]\n",
     "    actual_stat = statistic(data_1, data_2)\n",
     "    \n",
     "    # Create random number generator\n",
@@ -933,24 +941,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ttest_indResult(statistic=-2.2854345381656103, pvalue=0.02393188312239561)"
+       "array([-2.29,  0.02])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Conduct a parametric hypothesis test\n",
-    "stats.ttest_ind(df.loc[df.gender=='M', 'temperature'], \n",
-    "                df.loc[df.gender=='F', 'temperature'])"
+    "np.round_(  \n",
+    "    stats.ttest_ind(df.loc[df.gender=='M', 'temperature'], \n",
+    "                    df.loc[df.gender=='F', 'temperature']), \n",
+    "    2)"
    ]
   },
   {
